[tool.poetry]
name = "sellers_json"
version = "0.1.0"
description = "This automates the process of tracking changes for sellers.json files and creating seller_removed.json"
authors = ["dallas-x <dallas@sheldyn.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
snowflake-connector-python = "^2.9.0"
snowflake-sqlalchemy = "^1.4.5"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
Sphinx = "^5.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
